# YTtools

./: .gitignore  AGENTS.md  CHANGELOG.md  CLA_CORPORATE.md  CLA_INDIVIDUAL.md  CONTRIBUTING.md  LICENSE-COMMERCIAL.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  llm-providers.md  tools.md
src/yttools/: __init__.py  __main__.py  cli.py  config.py  version.py
src/yttools/core/: __init__.py  db.py  embeddings.py  exports.py  llm.py  models.py  progress.py  transcripts.py  urls.py  youtube.py
src/yttools/core/migrations/: 0001_initial.sql  0002_ask_chunks.sql  0003_video_comment_count.sql  __init__.py
src/yttools/tools/: __init__.py  agent.py  ask.py  blog.py  compare.py  fetch.py  quotes.py  search.py  summarize.py  timeline.py
src/yttools/web/: __init__.py  app.py
src/yttools/web/routes/: __init__.py  api.py  pages.py  sse.py
src/yttools/web/static/: app.js  styles.css
src/yttools/web/templates/: ask.html  base.html  blog.html  compare.html  fetch.html  quotes.html  search.html  settings.html  summarize.html  timeline.html
tests/: conftest.py  test_agent.py  test_ask.py  test_blog.py  test_compare.py  test_config.py  test_db.py  test_embeddings.py  test_exports.py  test_fetch.py  test_llm.py  test_models.py  test_progress.py  test_quotes.py  test_search.py  test_summarize.py  test_timeline.py  test_transcripts.py  test_urls.py  test_web.py  test_youtube.py
tests/fixtures/: channel_listing.jsonl  sample.vtt  video_metadata.json
