[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yttools"
dynamic = ["version"]
description = "Local-first toolkit for turning public YouTube channels into a searchable knowledge base."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "William Nichols" }]
keywords = ["youtube", "transcripts", "search", "local-first", "yt-dlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "typer>=0.12",
    "yt-dlp>=2024.1.0",
    "httpx>=0.27",
    "sse-starlette>=2.0",
    "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.2",
]

[project.scripts]
yttools = "yttools.__main__:main"

[project.urls]
Homepage = "https://github.com/nicholsbill/YTtools"
Repository = "https://github.com/nicholsbill/YTtools"
Issues = "https://github.com/nicholsbill/YTtools/issues"

[tool.hatch.version]
path = "src/yttools/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/yttools"]

[tool.hatch.build.targets.sdist]
include = ["src/yttools", "tests", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ANN", "RUF"]
ignore = ["ANN401"]

[tool.ruff.lint.flake8-bugbear]
# Typer's API requires Argument()/Option() calls as parameter defaults.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"src/yttools/**/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sqlite_vec", "sse_starlette.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=yttools --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["yttools"]
branch = true

[tool.coverage.report]
show_missing = true
